@@ -4,13 +4,13 @@ Hash: SHA1
 AUX 080407.config 538 RMD160 1d01b990da1ef148535171432e55a66137bb1084 SHA1 10c57cd072f7daa7d1687a01f433505e1cf3728d SHA256 4d4aa496f638eb1778b9f7b097b793d2c60b1fabe1e5fb4b0794347052b94b50
 DIST heirloom-doctools-080407.tar.bz2 837016 RMD160 662083312232ce15b5d3a43ed3d21e2cdff49845 SHA1 2e997da8fad0700ae2183b04ad7a286f34b94e8b SHA256 43c0f31908aa476bb16f7159a6337008674afe81754d02b577812d734d559c38
 EBUILD heirloom-doctools-080407-r1.ebuild 5008 RMD160 ebf0c1b4d4355e36c87bf4b9e7801f8e6a51b3a4 SHA1 db9097092edb74705f2733ee99e84426c66de42b SHA256 951a041781a556cbd204fe432ab3d5ef95cb40a1cf2d37f4643dd023e6c4b919
-EBUILD heirloom-doctools-080407-r2.ebuild 5870 RMD160 963268658be0b82a9482a44e0687569a0e81dc55 SHA1 290c073f91e562c6a729854ff550b0736d6332a1 SHA256 7f95fd5879290f0e2eee1dd97a6ff004ae4b0b9c305f4c178c50d56d913678d7
-MISC ChangeLog 1356 RMD160 8d4b35ed66b88d927893c0ec9b8d9ecec865c7eb SHA1 393a17bc87b5d0cc47e174339780c2599609bba5 SHA256 3a8cec3b4fe0cebd2fdf2bf61267654dd0792e68300b7d11597698fa09c9b92a
+EBUILD heirloom-doctools-080407-r2.ebuild 6324 RMD160 1455e5ae460b88cdfa035daf8458506264eca5b2 SHA1 584d1b26f424b6ec938b3f703fe21aeaa7f1679d SHA256 2523831f44a7007cc74838a79fcf32c10dd2d0e8302a97a20331fbd500e8fe50
+MISC ChangeLog 1558 RMD160 6223b16475be0c44b03fb45dd681cb0093840176 SHA1 c329a439e9301fb21e814b3cce6add95a454252a SHA256 6e39eeb400ea2987239ea1e4cda7bce1a77dbd696490507709a09dc84797c903
 MISC metadata.xml 408 RMD160 c9fcc55b0e2e058d59b97f826c0e85e75b7ee1d9 SHA1 20f49281157e44cf6525c842f0eafeedfd454a8f SHA256 8b38822af3fabff5f68899e7522cc162821f221aed419a2cd8a769102cf45908
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrGcegACgkQAiZjviIA2XjbpwCggYh0TQLz4FdXUnTYhPHdeWQF
-jr0AnRGlSd+rKdi+tLBafjwRjjGHAQHA
-=ifAa
+iEYEARECAAYFAkrGfGAACgkQAiZjviIA2XiiOQCfZUjKoBzd/cdJ+rBOa2VGjXh+
+9n4AnAlQ+qMSlajzqFwpXdCNg4DVjIYO
+=S4Ma
 -----END PGP SIGNATURE-----
