@@ -1,6 +1,11 @@
 # ChangeLog for app-doc/heirloom-doctools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/heirloom-doctools/Attic/ChangeLog,v 1.3 2009/10/02 21:34:47 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/heirloom-doctools/Attic/ChangeLog,v 1.4 2009/10/02 22:19:28 flameeyes Exp $
+
+  02 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  heirloom-doctools-080407-r2.ebuild:
+  Add further warnings about rebuilding the man implementation, add a
+  warning about the use with man-db.
 
 *heirloom-doctools-080407-r2 (02 Oct 2009)
 
